# simplon_projects

./: .gitignore  pyproject.toml
brief_satisfacion_client/: .gitignore  Copie_de_Brief_WebScraping_beautifulSoup_Friends.ipynb  brief_satisfaction_client.py  list_request.sql  testing.ipynb
semaine11/: Projet_Movies_MongoDB.ipynb
semaine2/: Brief_Livres.ipynb  brief_satisfaction_client.py  brief_satisfaction_client.sql
semaine3/: Brief_WebScraping_beautifulSoup_Friends.ipynb  Copie_de_Brief_WebScraping_beautifulSoup_Friends.ipynb
semaine4/: openweather_brief.ipynb
semaine4/forcast_api/: app.py
semaine4/forcast_api/templates/: details.html  forecast.html  home.html
semaine5/: docker-compose.yml  mongo_brief.ipynb  mongo_hw.ipynb  pymongo_tp.ipynb
semaine5/app/: Dockerfile
semaine5/mongo_app/: app.py
semaine5/mongo_app/templates/: index.html  results.html
semaine5/script/: Dockerfile
semaine5/script/database/: sample-airbnb.json
semaine6/docker-project/: README.md  docker-compose.yml
semaine6/docker-project/flask_app/: Dockerfile  app.py
semaine6/docker-project/jupyter/: requirements.txt
semaine6/docker-project/streamlit_app/: Dockerfile  app.py
semaine6/docker_hello/: Dockerfile  app.py
semaine6/my_streamlit_app/: Dockerfile  app.py  compose.yaml
semaine7/ETL-project/: docker-compose.yml
semaine7/ETL-project/jupyter/: Dockerfile  requirements.txt
semaine9/: HelloWorldFromPySpark(1).ipynb  HelloWorldFromPySpark.ipynb  Projet_Analyse_spotify.ipynb  RDD_DataFrames.ipynb  etudiants.csv  input.txt  intro_SparkSQL.ipynb  memo_spark.ipynb
(+6 files in other folders)
